<resources>
    <string name="app_name">WinningEdge</string>
    <string name="app_title">Winning Edge</string>

    <string name="livescore">Live Score</string>
    <string name="goals">Goals</string>
    <string name="points">Points</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="dash">-</string>

    <string name="setup">Match Setup</string>
    <string name="football">Football</string>
    <string name="hurling">Hurling</string>

    <string name="scoreOnly">Score Only</string>
    <string name="scoreStats">Score + Stats</string>

    <string name="homeTeam">Home Team</string>
    <string name="awayTeam">Away Team</string>
    <string name="team">Choose team to record stats for:</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_setup">SetupActivity</string>

    <string name="error_server_side">Error: Please Try Again Later</string>
    <string name="error_email">No User with this Email</string>
    <string name="error_password">Incorrect Password</string>


    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="start">Start Match</string>
    <string name="title_activity_stat">StatActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="icon_desc">Trophy Icon</string>

    <string name="prompt_home">Home Team</string>
    <string name="prompt_away">Away Team</string>

    <string name="goal_start">0</string>
    <string name="point_start">00</string>

    <string name="new_reg">New to Winning Edge?</string>
    <string name="link_reg"><u>Register Here</u></string>
    <string name="log">Already Registered?</string>
    <string name="log_here"><u>Login Here</u></string>

    <string name="timer">00:00</string>
    <string name="wides">Wides</string>
    <string name="shorts">Shorts</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="dialogTitle">Score Options</string>
    <string name="play">Score From:</string>
    <string name="inPlay">In Play</string>
    <string name="deadBall">Dead Ball</string>

    <string name="distance">Score Distance:</string>
    <string name="d21">Inside 21</string>
    <string name="d45">Inside 45</string>
    <string name="d45Plus">Outside 45</string>

    <string name="fouls">Fouls</string>
    <string name="fromFouls">Scores From Fouls</string>
    <string name="blocks">Blocks</string>
    <string name="hooks">Hooks</string>
    <string name="yellows">Yellows</string>
    <string name="reds">Reds</string>

    <string name="sPasses">Successful Passes</string>
    <string name="uPasses">Unsuccessful Passes</string>
    <string name="sHPasses">Successful Hand Passes</string>
    <string name="uHPasses">Unsuccessful Hand Passes</string>
    <string name="ownWon">Restarts Won</string>
    <string name="ownLost">Restarts Lost</string>
    <string name="oppWon">Opp. Restarts Won</string>
    <string name="oppLost">Opp. Restarts Lost</string>

</resources>
