<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:id="@+id/mainLayout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:contentDescription="@string/icon_desc"
            android:id="@+id/logo"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/trophy_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-medium"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:id="@+id/AppTitle"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView2" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/relativeLayout">

                <TextView
                    android:id="@+id/text"
                    android:text="@string/livescore"
                    android:textSize="22sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="20sp"
                    android:id="@+id/homeGoal"
                    android:layout_below="@+id/text"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="90dp"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/away"
                    android:textSize="20sp"
                    android:id="@+id/awayGoal"
                    android:layout_alignBottom="@+id/homeGoal"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="20sp"
                    android:id="@+id/homePoint"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="10dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"/>

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/away"
                    android:textSize="20sp"
                    android:id="@+id/awayPoint"
                    android:layout_alignBottom="@+id/homePoint"
                    android:layout_alignRight="@+id/awayGoal"
                    android:layout_alignEnd="@+id/awayGoal"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/goals"
                    android:id="@+id/textView"
                    android:layout_marginBottom="5dp"
                    android:layout_above="@+id/awayGoal"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/points"
                    android:id="@+id/textView2"
                    android:layout_marginTop="30dp"
                    android:layout_below="@+id/homeGoal"
                    android:layout_centerHorizontal="true" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/text"
                    android:id="@+id/scoreline">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/goal_start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/hGoals" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/dash"
                        android:text="@string/dash"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/point_start"
                        android:id="@+id/hPoints"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp" />

                    <View android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/goal_start"
                        android:id="@+id/aGoals"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/dash2"
                        android:text="@string/dash"
                        android:layout_marginRight="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/point_start"
                        android:id="@+id/aPoints"
                        android:layout_marginRight="5dp"/>
                </LinearLayout>

                <Button
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textSize="20sp"
                    android:id="@+id/matchEvent"
                    android:layout_below="@+id/homePoint"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="48dp"
                    android:textColor="@android:color/white"
                    android:background="@android:color/black"/>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
